--- a/gnss-sdr_Galileo_E1_ishort.conf
+++ b/gnss-sdr_Galileo_E1_ishort.conf
@@ -22,6 +22,7 @@ SignalSource.filename=/home/harshad/Work/galileo-sdr-sim/build/loc_target1_jun20
 SignalSource.filename=/home/harshad/projects/galileo-sdr-sim/build/gal_sim_42-71.bin; <- PUT YOUR FILE HERE
 SignalSource.filename=/home/harshad/projects/galileo-sdr-sim/build/galileosim.bin;
 ;SignalSource.filename=/home/harshad/Work/galileo-sdr-sim/gnss-sdr-exp/src/tests/signal_samples/Galileo_E1_ID_1_Fs_4Msps_8ms.dat
+
 SignalSource.item_type=ishort
 SignalSource.sampling_frequency=2600000
 ;SignalSource.samples=240000000
@@ -53,11 +54,11 @@ InputFilter.implementation=Pass_Through
 Resampler.implementation=Pass_Through
 
 ;######### CHANNELS GLOBAL CONFIG ############
-Channels_1B.count=7
-Channels.in_acquisition=7
+Channels_1B.count=1
+Channels.in_acquisition=1
 Channel.signal=1B
 
-;Channel0.satellite=24
+Channel0.satellite=1
 ;Channel1.satellite=9
 ;Channel2.satellite=3
 ;Channel3.satellite=15
