gnss-sdr conf update

--- a/gnss-sdr_Galileo_E1_ishort.conf
+++ b/gnss-sdr_Galileo_E1_ishort.conf
@@ -12,16 +12,10 @@
 ;######### GLOBAL OPTIONS ##################
 ;internal_fs_sps: Internal signal sampling frequency after the signal conditioning stage [samples per second].
 GNSS-SDR.internal_fs_sps=2600000
-;GNSS-SDR.Galileo_banned_prns=13,34
-;GNSS-SDR.observable_interval_ms=4
 
 ;######### SIGNAL_SOURCE CONFIG ############
 SignalSource.implementation=File_Signal_Source
-SignalSource.filename=/home/harshad/Work/galileo-sdr-sim/galileo_PRN1_test.cfile; <- PUT YOUR FILE HERE
-SignalSource.filename=/home/harshad/Work/galileo-sdr-sim/build/loc_target1_jun20_all_4MHz_5min.bin; <- PUT YOUR FILE HERE
-SignalSource.filename=/home/harshad/projects/galileo-sdr-sim/build/gal_sim_42-71.bin; <- PUT YOUR FILE HERE
-SignalSource.filename=/home/harshad/projects/galileo-sdr-sim/build/galileosim.bin;
-;SignalSource.filename=/home/harshad/Work/galileo-sdr-sim/gnss-sdr-exp/src/tests/signal_samples/Galileo_E1_ID_1_Fs_4Msps_8ms.dat
+SignalSource.filename=/tmp/galileosim.bin;
 
 SignalSource.item_type=ishort
 SignalSource.sampling_frequency=2600000
@@ -54,11 +48,11 @@ InputFilter.implementation=Pass_Through
 Resampler.implementation=Pass_Through
 
 ;######### CHANNELS GLOBAL CONFIG ############
-Channels_1B.count=1
-Channels.in_acquisition=1
+Channels_1B.count=7
+Channels.in_acquisition=7
 Channel.signal=1B
 
-Channel0.satellite=1
+;Channel0.satellite=1
 ;Channel1.satellite=9
 ;Channel2.satellite=3
 ;Channel3.satellite=15
@@ -74,7 +68,7 @@ Acquisition_1B.implementation=Galileo_E1_PCPS_Ambiguous_Acquisition
 Acquisition_1B.item_type=gr_complex
 Acquisition_1B.coherent_integration_time_ms=4
 ;Acquisition_1B.threshold=1.25
-Acquisition_1B.pfa=0.00001
+Acquisition_1B.pfa=0.000001
 Acquisition_1B.doppler_max=8000
 Acquisition_1B.doppler_step=100
 Acquisition_1B.cboc=false   
@@ -90,7 +84,7 @@ Tracking_1B.dll_bw_hz=3.0;
 Tracking_1B.early_late_space_chips=0.15;
 Tracking_1B.very_early_late_space_chips=0.6;
 Tracking_1B.track_pilot=true
-Tracking_1B.dump=true
+Tracking_1B.dump=false
 Tracking_1B.dump_filename=./veml_tracking_ch_
 
 ;######### TELEMETRY DECODER CONFIG ############
@@ -120,7 +114,7 @@ PVT.rtcm_MT1045_rate_ms=5000
 PVT.rtcm_MSM_rate_ms=1000
 PVT.flag_rtcm_tty_port=false;
 PVT.rtcm_dump_devname=/dev/pts/1
-PVT.dump=true
+PVT.dump=false
 PVT.dump_filename=./PVT
 PVT.raim_fde = 1
 
