--- a/gnss-sdr_Galileo_E1_ishort.conf
+++ b/gnss-sdr_Galileo_E1_ishort.conf
@@ -16,59 +16,33 @@ GNSS-SDR.internal_fs_sps=2600000
 ;######### SIGNAL_SOURCE CONFIG ############
 SignalSource.implementation=File_Signal_Source
 SignalSource.filename=/tmp/galileosim.bin;
-
 SignalSource.item_type=ishort
 SignalSource.sampling_frequency=2600000
-;SignalSource.samples=240000000
-;SignalSource.seconds_to_skip=20
 SignalSource.repeat=false
 SignalSource.enable_throttle_control=false
 
-;SignalSource.implementation=GNSSSignalGenerator
-;SignalSource.fs_hz=4000000
-;SignalSource.item_type=gr_complex
-;SignalSource.num_satellites=1
-;SignalSource.system_0=E
-;SignalSource.PRN_0=10
-;SignalSource.CN0_dB_0=44
-;SignalSource.doppler_Hz_0=0
-;SignalSource.delay_chips_0=140
-
-;;######### SIGNAL_CONDITIONER CONFIG ############
+;######### SIGNAL_CONDITIONER CONFIG ############
 SignalConditioner.implementation=Signal_Conditioner
-;
-;;######### DATA_TYPE_ADAPTER CONFIG ############
-;DataTypeAdapter.implementation=Pass_Through
+
+;######### DATA_TYPE_ADAPTER CONFIG ############
 DataTypeAdapter.implementation=Ishort_To_Complex
-;
-;;######### INPUT_FILTER CONFIG ############
+
+;######### INPUT_FILTER CONFIG ############
 InputFilter.implementation=Pass_Through
-;
-;;######### RESAMPLER CONFIG ############
+
+;######### RESAMPLER CONFIG ############
 Resampler.implementation=Pass_Through
 
 ;######### CHANNELS GLOBAL CONFIG ############
-Channels_1B.count=7
+Channels_1B.count=8
 Channels.in_acquisition=7
 Channel.signal=1B
-
-;Channel0.satellite=1
-;Channel1.satellite=9
-;Channel2.satellite=3
-;Channel3.satellite=15
-;Channel4.satellite=13
-;Channel5.satellite=5
-;Channel6.satellite=31
-;Channel7.satellite=1
-;Channel8.satellite=11
-;Channel9.satellite=26
 
 ;######### ACQUISITION GLOBAL CONFIG ############
 Acquisition_1B.implementation=Galileo_E1_PCPS_Ambiguous_Acquisition
 Acquisition_1B.item_type=gr_complex
 Acquisition_1B.coherent_integration_time_ms=4
-;Acquisition_1B.threshold=1.25
-Acquisition_1B.pfa=0.000001
+Acquisition_1B.pfa=0.00000001
 Acquisition_1B.doppler_max=8000
 Acquisition_1B.doppler_step=100
 Acquisition_1B.cboc=false   
@@ -84,8 +58,9 @@ Tracking_1B.dll_bw_hz=3.0;
 Tracking_1B.early_late_space_chips=0.15;
 Tracking_1B.very_early_late_space_chips=0.6;
 Tracking_1B.track_pilot=true
-Tracking_1B.dump=false
+Tracking_1B.dump=true
 Tracking_1B.dump_filename=./veml_tracking_ch_
+Tracking_1B.extend_correlation_symbols=25
 
 ;######### TELEMETRY DECODER CONFIG ############
 TelemetryDecoder_1B.implementation=Galileo_E1B_Telemetry_Decoder
@@ -114,7 +89,7 @@ PVT.rtcm_MT1045_rate_ms=5000
 PVT.rtcm_MSM_rate_ms=1000
 PVT.flag_rtcm_tty_port=false;
 PVT.rtcm_dump_devname=/dev/pts/1
-PVT.dump=false
+PVT.dump=true
 PVT.dump_filename=./PVT
 PVT.raim_fde = 1
 
