tracking and pvt eval

--- a/gnss-sdr_Galileo_E1_ishort.conf
+++ b/gnss-sdr_Galileo_E1_ishort.conf
@@ -92,6 +92,8 @@ PVT.rtcm_dump_devname=/dev/pts/1
 PVT.dump=true
 PVT.dump_filename=./PVT
 PVT.raim_fde = 1
+PVT.output_enabled=false
+
 
 Monitor.enable_monitor=false
 Monitor.decimation_factor=1
